discussion/kv_engine/185693/185693_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/neo' into 'couchbase/master'

* commit '55a4de06e':
  MB-54516: Modify history out of sync with many vbuckets
  MB-54729: Add snapshot flag "may contain duplicates" for CDC backfill
  MB-54666: Producer doesn't enable ChangeStreams if not magma

Conflicts: engines/ep/src/collections/collections_types.cc
  engines/ep/src/collections/collections_types.h
  engines/ep/src/collections/vbucket_manifest.cc
  engines/ep/src/collections/vbucket_manifest_entry.h
  engines/ep/tests/mock/mock_magma_kvstore.h
  engines/ep/tests/module_tests/collections/filter_test.cc
  engines/ep/tests/module_tests/collections/vbucket_manifest_entry_test.cc

Change-Id: I6482d3174bcf98d542d3efe6f5d796e4e81854a6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-27 13:46:46.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 14:00:41.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22553/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5: error: expected ")" [clang-diagnostic-error]
    : name(name), scope(scope),
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:131:51: note: to match this "("
CollectionSharedMetaData::CollectionSharedMetaData(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5: error: expected parameter declarator [clang-diagnostic-error]
    : name(name), scope(scope),
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:210:1: error: expected function body after function declarator [clang-diagnostic-error]
} // namespace VB
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:234:31: error: expected "}" [clang-diagnostic-error]
} // end namespace Collections
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:27:23: note: to match this "{"
namespace Collections {
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22553/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected ")" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22553/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51946/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/collections/collections_types.cc(134): error C2059: syntax error: ":" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51946/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43590/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected parameter declarator
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43590/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1323/ : FAILURE

Compile error at [2023-01-27T13:52:45.041Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected identifier before ?:? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1323/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12277/ : FAILURE

Compile error at [2023-01-27T13:51:57.323Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected parameter declarator
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12277/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24604/ : FAILURE

Compile error at [2023-01-27T13:55:55.898Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected identifier before ?:? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24604/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24145/ : FAILURE

Compile error at [2023-01-27T13:51:06.337Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected parameter declarator
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24145/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25898/ : FAILURE

Compile error at [2023-01-27T13:57:08.690Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected parameter declarator
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25898/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25029/ : FAILURE

Compile error at [2023-01-27T13:56:30.271Z] ../kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected identifier before ?:? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25029/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33024/ : FAILURE

Compile error at [2023-01-27T13:57:52.283Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected parameter declarator
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33024/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12361/ : FAILURE

Compile error at [2023-01-27T14:00:22.017Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/collections/collections_types.cc:134:5:
error: expected identifier before ?:? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12361/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22407/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
